--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
-# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+fs_permissions = [{ access = "read", path = "./script" }]
+# evm_version = "cancun"
+optimizer = true
+optimizer-runs = 200
+solc = "0.8.17"
+via_ir = false
