chore: Update .env.example with Sepolia network and plugin configurations

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,46 @@
 # NETWORK AND ACCOUNT(s)
-DEPLOYMENT_PRIVATE_KEY="0x..."
-REFUND_ADDRESS="0x..."
+DEPLOYMENT_PRIVATE_KEY=""
+REFUND_ADDRESS=""
 
 # The name of the networks to use for test/production
-TESTNET_NETWORK="holesky"
+TESTNET_NETWORK="sepolia"
 PRODNET_NETWORK="mainnet"
 
 # The RPC of the networks to use for test/production
-TESTNET_RPC_URL="https://holesky.drpc.org"
+TESTNET_RPC_URL="https://rpc.ankr.com/eth_sepolia"
 PRODNET_RPC_URL="https://eth.drpc.org"
 
 # API Keys (optional)
 # Note that having these active will slow down unit tests even when not needed
 # So recommended to only activate when needed
-ALCHEMY_API_KEY="..."
-ETHERSCAN_API_KEY="..."
+# ALCHEMY_API_KEY="fvrO3OBHh4Ogppzk89kR3kcVXP97g77o"
+# ETHERSCAN_API_KEY="fvrO3OBHh4Ogppzk89kR3kcVXP97g77o"
 
 # The address that will own the plugin repository
-PLUGIN_MAINTAINER="0x..."
-LOCK_TO_VOTE_REPO_ENS_SUBDOMAIN=""  # blank for none
-LOCK_TO_APPROVE_REPO_ENS_SUBDOMAIN=""  # blank for none
+PLUGIN_MAINTAINER="0xDAef100C116E6D8358Ac3987e40b8c33F0b2730f"
+MY_PLUGIN_REPO_ENS_SUBDOMAIN="myplugin420-69"
+PAYMENTS_PLUGIN_REPO_ENS_SUBDOMAIN="xelmar-payments-plugin"
+
+# MULTISIG PARAMETERS
+# define a list of multisig members - said multisig will be assigned administrator roles of the ve contracts
+MULTISIG_MEMBERS_JSON_FILE_NAME="/script/multisig-members.json"
+MIN_APPROVALS="1" # How many multisig approvals are required
+MULTISIG_PROPOSAL_EXPIRATION_PERIOD="864000" # How long until a pending proposal expires (10 days)
+
 
 # OSx BASE CONTRACT ADDRESSES (network dependent, see active_contracts.json on lib/osx)
 
-# HOLESKY
-PLUGIN_REPO_FACTORY="0x95D563382BeD5AcB458759EE05b27DF2CB019Cc7"
-GOVERNANCE_ERC20_BASE="0xC24188a73dc09aA7C721f96Ad8857B469C01dC9f"
-GOVERNANCE_WRAPPED_ERC20_BASE="0x7a62da7B56fB3bfCdF70E900787010Bc4c9Ca42e"
+# Sepolia
+PLUGIN_REPO_FACTORY="0x07f49c49Ce2A99CF7C28F66673d406386BDD8Ff4"
+GOVERNANCE_ERC20_BASE="0xA03C2182af8eC460D498108C92E8638a580b94d4"
+GOVERNANCE_WRAPPED_ERC20_BASE="0x6E924eA5864044D8642385683fFA5AD42FB687f2"
+DAO_FACTORY="0x7a62da7B56fB3bfCdF70E900787010Bc4c9Ca42e"
+PLUGIN_SETUP_PROCESSOR="0xC24188a73dc09aA7C721f96Ad8857B469C01dC9f"
 
-# # SEPOLIA
-# PLUGIN_REPO_FACTORY="0x07f49c49Ce2A99CF7C28F66673d406386BDD8Ff4"
-# GOVERNANCE_ERC20_BASE="0xA03C2182af8eC460D498108C92E8638a580b94d4"
-# GOVERNANCE_WRAPPED_ERC20_BASE="0x6E924eA5864044D8642385683fFA5AD42FB687f2"
+# PLUGIN REPO PARAMETERS (per-network)
+# SEPOLIA
+MULTISIG_PLUGIN_REPO_ADDRESS="0x9e7956C8758470dE159481e5DD0d08F8B59217A2"
+MULTISIG_PLUGIN_RELEASE="1"
+MULTISIG_PLUGIN_BUILD="2"
+
+
